FlightPath 5.x Changelog
========================


2016-12-16
  Added a new feature to let What If save & load with any catalog year.  Built into the system
  are the options "Current" and "Student".
  
  
2016-12-13
  Fixed bug where zero-hour courses were not allowing repeats correctly.
  
  Added more CSS classes and options to displaying degree titles.
  

2016-11-20
  Converted FlightPath and module licenses' to GNU AGPL Version 3.0.  Generally, it is compatible
  with the previous GPLv3 license, with one addition as it pertains to servers.
  See more here: http://getflightpath.com/gnu-agpl 
   

2016-11-16
  Added ability for a "locked" directive in the student_degrees table.  It lets you lock an entire
  degree classification from editing at a time.


2016-11-14
  Added minor CSS to "Change degree options" link.


2016-11-09
  Fixed minor PHP warning which pie charts were not enabled.
  

2016-11-05
  Made varius modifications to accomodate a student with no assigned major code, or, a major code which could
  not be found in the designated catalog year.


2016-11-01
  Fixed bug where identical courses which had all been advised were not correctly
  being counted as advised/fulfilled when only one was fulfilled, and before the advising term
  was advanced.
  

2016-10-28
  Added a setting to Configure School settings, to hide advising checkmarks if the student has enrolled
  in the course they were advised for (also works for completed as well).

  Added a new permission (in Admin module section) for user to be able to Delete courses, groups, or degrees.
  Also added those checks to the deletion functions for those forms.
  
  Fixed a bug in the course_search module, which was negating any effort to NOT have course names automatically
  capitalized.
  

2016-10-24
  Added new hook: hook_flightpath_can_assign_course_to_group().  It lets custom modules decide whether or not
  to allow a course into a particular group at all.
  

2016-10-19