@@ -1,6 +1,11 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-12-22
+  Fixed a bug with substitutions, where the required courses was the same in two different
+  degrees, and the substituted courses was ALSO the same.  FlightPath was applying the sub
+  to the first instance of the course requirement, and not necessarily the one the user selected.
+  
 
 2016-12-16
   Added a new feature to let What If save & load with any catalog year.  Built into the system
